--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,7 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "include": [".eslintrc.cjs", "**/*.js", "**/*.ts", "express.d.ts"],
+  "exclude": ["node_modules", "dist"],
 }
